# llmbench-poc

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-entrypoint.sh  pyproject.toml  skaffold.yaml
.devcontainer/: devcontainer.json
manifests/base/: knative-service.yaml  kustomization.yaml
src/llmbench/chat/: app.py
src/llmbench/langchain/callbacks/: streamlit.py
